<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_report" >
    </include>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/layout_round_bg_gray"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/message_location_activity"
            android:id="@+id/textView3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">

            <Button
                android:layout_gravity="center_horizontal"
                android:onClick="regresar"
                android:textColor="#fff"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/round_corner_button_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_comeback_from_map"
                android:layout_marginRight="5dp"
                android:id="@+id/btnComeBack" />

            <Button
                android:layout_gravity="center_horizontal"
                android:onClick="setPosicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/round_corner_button_purple"
                android:text="@string/btn_select_location"
                android:id="@+id/btnSetPosition" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>