<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <!--LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:background="#1D8AA9"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="GUAYMAS"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="2015  - 2018"
            android:textColor="#fff"
            android:textSize="10dp"
            android:id="@+id/textView2" />
    </LinearLayout-->

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_report" >
    </include>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#00D7C6"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true">

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/report_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"/>

    <ScrollView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewFormReport"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/round_corner_button_purple"
                android:drawableLeft="@drawable/view_report"
                android:text="@string/button_request_report"
                android:onClick="goToConsultReport"
                android:id="@+id/btnCheckReport" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#1486A6"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/report_title"
                android:id="@+id/tvReporteCiudadano" />

            <!--Container form start-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:layout_height="wrap_content">

                <!--Interested Start-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:hint="@string/prompt_et_interested"
                            android:id="@+id/etInterested" />

                    </LinearLayout>

                </LinearLayout>
                <!-- Interested End -->

                <!-- Address-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPostalAddress"
                            android:ems="10"
                            android:hint="@string/prompt_et_address"
                            android:id="@+id/etAddress" />

                    </LinearLayout>

                </LinearLayout>
                <!--  Address -->

                <!-- suburb-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">


                        <Spinner
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"
                            android:id="@+id/spSuburb" />

                    </LinearLayout>

                </LinearLayout>
                <!--  suburb -->

                <!-- map-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_location"
                    android:drawableLeft="@drawable/location_small"
                    android:drawableRight="@drawable/location_small"
                    android:id="@+id/tvIndicateMap" />

                <LinearLayout
                    android:id="@+id/containerMap"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="150dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#CCC"
                        android:layout_height="fill_parent">


                        <fragment
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"/>


                    </LinearLayout>

                </LinearLayout>
                <!--  map -->

                <!-- Cellphone-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:hint="@string/prompt_et_telephone"
                            android:id="@+id/etTelephone" />

                    </LinearLayout>

                </LinearLayout>
                <!--  Cellphone -->

                <!-- Email-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:hint="@string/prompt_et_email"
                            android:id="@+id/etEmail" />

                    </LinearLayout>

                </LinearLayout>
                <!--  Email -->

                <!--Type Choosen Start-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_height="130dp">

                    <ImageButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imgBump"
                        android:src="@drawable/bache"
                        android:background="#00000000"
                        android:layout_weight="1"
                        android:onClick="selectBump"
                        android:layout_margin="1dp"
                        android:scaleType="centerInside" />

                    <ImageButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imgLighting"
                        android:src="@drawable/alumbrado"
                        android:background="#00000000"
                        android:layout_weight="1"
                        android:onClick="selectLighting"
                        android:layout_margin="1dp"
                        android:scaleType="centerInside" />

                    <ImageButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imgOther"
                        android:onClick="selectOther"
                        android:src="@drawable/otro"
                        android:background="#00000000"
                        android:layout_weight="1"
                        android:layout_margin="1dp"
                        android:scaleType="centerInside" />

                </LinearLayout>
                <!--Type Choosen End-->

                <!-- Subject-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">


                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:minLines="2"
                            android:hint="@string/prompt_et_subject"
                            android:ems="10"
                            android:id="@+id/etSubject" />

                    </LinearLayout>

                </LinearLayout>
                <!-- Subject -->

                <!-- photo-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_photo"
                        android:textColor="#283040"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:drawableLeft="@drawable/picture_small"
                        android:background="#ccc"
                        android:onClick="addImage"
                        android:id="@+id/btnAddPhoto" />


                </LinearLayout>
                <!-- photo -->

                <!--foto preview-->
                <LinearLayout
                    android:id="@+id/containerPreview"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgPreview" />

                </LinearLayout>
                <!--foto preview-->

                <!-- Submit-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:background="@drawable/layout_round_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:background="#fff"
                        android:layout_height="wrap_content">


                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:padding="0dp"
                            android:textColor="#fff"
                            android:onClick="sendReportButton"
                            android:layout_margin="0dp"
                            android:text="@string/send_request_report"
                            android:background="#660983"
                            android:id="@+id/button" />

                    </LinearLayout>

                </LinearLayout>
                <!--  Submit -->


            </LinearLayout>
            <!--Container form end-->

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
